--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,15 +16,14 @@ jobs:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python $${{ matrix.python-version }}
-        uses: actions/setup-python@v3
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python setup.py install
+          python -m pip install --upgrade pip setuptools
           pip install pytest
       - name: Test with pytest
         run: |
