--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,8 +23,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools
-          pip install pytest
+          python -m pip install --upgrade pip
+          pip install setuptools pytest
+          python setup.py install
       - name: Test with pytest
         run: |
           pytest
